--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -7,6 +7,20 @@
 @import url('fontawesome-all.min.css');
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic");
 
+@include breakpoints((
+    xlarge:  ( 1281px,  1800px ),
+    large:   ( 981px,   1280px ),
+    medium:  ( 737px,   980px  ),
+    small:   ( 481px,   736px  ),
+    xsmall:  ( null,    480px  ),
+));
+
+// Import components after breakpoints are defined
+@import 'components/menu';
+@import 'layout/project';
+
+
+
 /*
 	Strata by HTML5 UP
 	html5up.net | @ajlkn
@@ -16,15 +30,6 @@
 $size-header-width: 35%;
 $size-header-pad: 4em;
 
-// Breakpoints.
-
-	@include breakpoints((
-		xlarge:  ( 1281px,  1800px ),
-		large:   ( 981px,   1280px ),
-		medium:  ( 737px,   980px  ),
-		small:   ( 481px,   736px  ),
-		xsmall:  ( null,    480px  ),
-	));
 
 // Reset.
 // Based on meyerweb.com/eric/tools/css/reset (v2.0 | 20110126 | License: public domain)
