--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2031,7 +2031,7 @@ table.alt tfoot {
   position: fixed;
   text-align: right;
   top: 0;
-  width: 35%;
+  width: 25%;
 }
 #header > * {
   -moz-flex-shrink: 0;
@@ -2060,8 +2060,14 @@ table.alt tfoot {
   margin: 0;
 }
 #header .image.avatar {
-  margin: 0 0 1em 0;
-  width: 6.25em;
+  width: 5.5em;
+  height: 5.5em;
+}
+#header .image.avatar img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 50%;
 }
 
 #footer .icons {
@@ -2094,10 +2100,10 @@ table.alt tfoot {
 }
 
 #main {
-  margin-left: 35%;
+  margin-left: 25%;
   max-width: 54em;
   padding: 8em 4em 4em 4em;
-  width: calc(100% - 35%);
+  width: calc(100% - 25%);
 }
 #main > section {
   border-top: solid 2px #efefef;
@@ -2276,6 +2282,37 @@ table.alt tfoot {
 
 .related-item:hover .related-item-caption {
   transform: translateY(0);
+}
+
+.resume-header {
+  padding: 3em 0 1.5em 0;
+  text-align: center;
+  background-color: #f5f5f5;
+  margin-bottom: 2em;
+}
+.resume-header h1 {
+  margin-bottom: 0.25em;
+}
+
+.resume-container {
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 1.5em;
+}
+.resume-container .button {
+  margin-bottom: 1.5em;
+}
+
+.pdf-container {
+  width: 100%;
+  height: 800px;
+  margin: 1em 0;
+  border: 1px solid #ddd;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+}
+.pdf-container object {
+  width: 100%;
+  height: 100%;
 }
 
 section.special, article.special {
