--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -35,6 +35,7 @@
 @import 'layout/footer';
 @import 'layout/main';
 @import 'layout/project';
+@import 'layout/resume';
 @import 'layout/sections';
 
 // Components
